--- a/cart.html
+++ b/cart.html
@@ -271,7 +271,7 @@
 			</div>
 		</div>
 	</section><!--/#do_action-->
-	<template id="template-carrito">
+	<!-- <template id="template-carrito">
 		
 		<td class="cart_product">
 			<a href=""><img  alt=""></a>
@@ -308,7 +308,7 @@
 			<a class="btn btn-default update" href="">Actualizar</a>
 			<a class="btn btn-default check_out" href="">Pagar</a>
 		</div>
-	</template>
+	</template> -->
 	
 
 	
