--- a/catalogo.html
+++ b/catalogo.html
@@ -242,7 +242,7 @@
 			</div>
 		</div>
     </template>
-	<!-- <template id="template-carrito">
+	<template id="template-carrito">
 		
 		<td class="cart_product">
 			<a href=""><img  alt=""></a>
@@ -279,7 +279,7 @@
 			<a class="btn btn-default update" href="">Actualizar</a>
 			<a class="btn btn-default check_out" href="">Pagar</a>
 		</div>
-	</template> -->
+	</template>
 	
 
     <script src="js/jquery.js"></script>
