--- a/catalogo.html
+++ b/catalogo.html
@@ -221,7 +221,7 @@
 						<img src="images/catalogo/anime2.png" alt="" />
 						<h2>precio</h2>
 						<p>Titulo</p>
-						<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Agregar al carrito</a>
+						<a  class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Agregar al carrito</a>
 					</div>
 				</div>
 			</div>
@@ -235,53 +235,13 @@
 						<img src="images/catalogo/prenda7.png" alt="" />
 						<h2>precio</h2>
 						<p> Titulo</p>
-						<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Agregar al carrito</a>
+						<a  class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Agregar al carrito</a>
 					</div>
 					
 				</div>
 			</div>
 		</div>
     </template>
-	<template id="template-carrito">
-		
-		<td class="cart_product">
-			<a href=""><img  alt=""></a>
-		</td>
-		<td class="cart_description">
-			<h4><a href="">nombre</a></h4>
-			<p>ID</p>
-		</td>
-		<td class="cart_price">
-			<p>precioUnidad</p>
-		</td>
-		<td class="cart_quantity">
-			<div class="cart_quantity_button">
-				<a class="cart_quantity_up" href=""> + </a>
-				<input class="cart_quantity_input" type="text" name="quantity" value="1" autocomplete="off" size="2">
-				<a class="cart_quantity_down" href=""> - </a>
-			</div>
-		</td>
-		<td class="cart_total">
-			<p class="cart_total_price">precioTotal</p>
-		</td>
-		<td class="cart_delete">
-			<a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
-		</td>
-	
-	</template>
-	<template id="template-footer">
-		<div class="total_area">
-			<ul>
-			<li>Subtotal del carrito <span>285.000</span></li>
-			<li>Costo de envio <span>Gratis</span></li>
-			<li>Total <span>285.000</span></li>
-			</ul>
-			<a class="btn btn-default update" href="">Actualizar</a>
-			<a class="btn btn-default check_out" href="">Pagar</a>
-		</div>
-	</template>
-	
-
     <script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.scrollUp.min.js"></script>
